Possible compatibility problems with earlier versions marked with '*'.

Fixed two bugs in OID codec - ber_oidc. Throw error when encoding/decoding
bad truncated OID. Fix decoding of OID X.Y... when X=2 and Y>39.

Fixed a bug in ASN.1 compiler that caused Type-1 Operator codec to fail.

Make ZOOM error code for "invalid query".

Fixed compilation for SSL which wasn't properly enabled for all platforms.

--- 2.0.10 2004/02/05 

For yaz.m4, allow second argument for YAZ_INIT to hold minimal version of
YAZ required.

* SRW/SRU 1.1 updates. Diagnostic code now a URI.

Added option -p <file> to make Generic Frontend Server to write PID file.

Added option -D to put Generic Frontend Server in background on its own.

Make ZOOM C recognize option "password". If unset, "pass" is used
(for backwards compatibility).

Fixed a bug in Generic Frontend Server that could make it crash if a
client sets characterSetNegotation bit, but didn't pass negotiation stuff
in InitRequest.

New YAZ client command, zversion, that sets Z39.50 version (1,2,3..).
Must be issued before open, in order to be in effect.

--- 2.0.9-6 2004/01/12  Debian/Windows

Make the SRU server more picky WRT unknown params, etc.

Bug fix: ZOOM scan response didn't return displayTerm - when present.

New YAZ client command, options, that sets Z39.50 options.

New utility functions yaz_init_opt_{encode,decode} to encode/decode Z39.50
options from a string of tokens (one token for each option bit).

Update SRW diagnostic code messages.

--- 2.0.9-5 2004/01/07  Debian/Windows

Handle user defined stylesheet for SRW/SRU.

--- 2.0.9-4 2004/01/06  Debian/Windows

Fix bug in decoding of Content-Length.

--- 2.0.9-3 2004/01/06  Debian/Windows

Fix a bug with decoding of XML packed records.

--- 2.0.9-2 2004/01/05  Debian only

Allow empty ODR (NMEM=0) for odr_oiddup and odr_getoidbystr.

Fix bug in SRW/SRU diagnostics decoding.

--- 2.0.9 2004/01/05

Fixed bug in Generic Frontend Server which could drop records exceeding